TRUNK
  - 'cruise start' starts dashboard in production environment. Use 'cruise start -e development' for development.
  - [bugfix] Debug-level messages are logged in development mode
  - [bugfix] Running builder doesn't block the dashboard on Windows
  - [bugfix] Default layout should not be applied to XML output for CCTray 
  - [bugfix] Test Failure Parser correctly parses failure messages from Mocha
------------------------------------------------------------------------------------------------------------------------
* 0.4.0
  - pretty user interface
  - 'Build now' button
  - dashboard displays projects as panels, not table rows
  - monitoring cruisecontrol.rb builds with CCTray.net
  - browser autorefresh - seeing latest build status without hitting 'refresh' on browser
  - builder's current activity (down/sleeping/checking for modifications/building) on the dashboard
  - builder plugin may be packaged as a directory with multiple files. It must have init.rb then.
  - plugin error handler: if a plugin raises an error in response to notification, builder logs the error, 
    notifies all other plugins, then raises an error of its own (thus triggering the build_loop_failed event)
  - improved error handling during builder initialization
  - Bugfix: blocked spaces in project names
------------------------------------------------------------------------------------------------------------------------
* 0.3.0
  - builder is building 'cruise', 'test' or 'default' target, depending on what is defined in the project
  - when build is running, OS variable CC_BUILD_ARTIFACTS is pointing to the build artifacts directory
  - customizable Rake task and build command
  - customizable polling interval
  - Handling of build loop errors (other than 'Build Failed')
  - improved logging
  - if builder is invoked with --trace option, it calls Rake with --trace option, too