@@ -5,17 +5,14 @@ class EmailNotifier
     @emails = []
   end
 
- def build_finished(build)
+  def build_finished(build)
     return if @emails.empty?
+    BuildMailer.deliver_build_failed(build, @emails) if build.failed?
+  end
 
-    if build.failed?
-      BuildMailer.deliver_build_failed(build, @emails)
-    else
-      last_build = build.last
-      if last_build and last_build.failed?
-        BuildMailer.deliver_build_fixed(build, @emails)
-      end
-    end
+  def build_fixed(build, previous_build)
+    return if @emails.empty?
+    BuildMailer.deliver_build_fixed(build, @emails)
   end
 
 end
